# orbital

./: .gitignore  .gitmodules  Body.cpp  Body.h  CMakeLists.txt  Doxyfile  Ellipse.cpp  Ellipse.h  Graphics.cpp  Graphics.h  Rectangle.cpp  Rectangle.h  System.cpp  System.h  Transform.cpp  constants.cpp  constants.h  main.cpp  planets.yml
src/: Body.cpp  Body.h  CMakeLists.txt  Ellipse.cpp  Ellipse.h  Graphics.cpp  Graphics.h  Rectangle.cpp  Rectangle.h  System.cpp  System.h  Transform.cpp  Transform.h  constants.cpp  constants.h
src/orbit/: Body.cpp  Body.h  Ellipse.cpp  Ellipse.h  Graphics.cpp  Graphics.h  LinearFunction.h  Rectangle.cpp  Rectangle.h  System.cpp  System.h  Transform.cpp  constants.cpp  constants.h
src/orbital/: Body.cpp  Body.h  DynamicArray.h  Ellipse.cpp  Ellipse.h  Graphics.cpp  Graphics.h  Line.cpp  Line.h  LinearFunction.cpp  LinearFunction.h  Rectangle.cpp  Rectangle.h  System.cpp  System.h  Transform.cpp  Transform.h  constants.cpp  constants.h
src/orbital/common/: DynamicArray.h  common.cpp  common.h  convert.h  range.h
src/orbital/graphics/: FramebufferLocation.h  FramebufferVector.h  Graphics.cpp  Graphics.h
src/orbital/math/: Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  Radian.cpp  Radian.h  Rectangle.cpp  Rectangle.h  Transform.cpp  Transform.h  Vector.h  elementary.h
src/orbital/physical/: Body.cpp  Body.h  System.cpp  System.h
test/: CMakeLists.txt  FloatingPointComparator.cpp  FloatingPointComparator.h  common.cpp  common.h  constants.cpp  dynamic_array.cpp  ellipse.cpp  integral.cpp  main.cpp  math.cpp  rectangle.cpp  transform.cpp  vector.cpp
