CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(orbital)

SET(CMAKE_CXX_STANDARD 17)

# Copy planets file:
ADD_CUSTOM_COMMAND(
        OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/planets.yml"
        COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/planets.yml" "${CMAKE_CURRENT_BINARY_DIR}/planets.yml"
        DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/planets.yml"
)
ADD_CUSTOM_TARGET(planets DEPENDS planets.yml)

# Build src:
ADD_SUBDIRECTORY(src)

# Build main executable:
SET(ORBITAL_MAIN orbital_main)
ADD_EXECUTABLE(${ORBITAL_MAIN} main.cpp)
TARGET_LINK_LIBRARIES(${ORBITAL_MAIN} orbital_lib)
ADD_DEPENDENCIES(${ORBITAL_MAIN} planets)

# Build tests:
ADD_SUBDIRECTORY(test)
